feat(collections): overhaul map and set functionality, including more comprehensive tests